<resources>
    <string name="app_name">Test_version_2</string>
    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_status">Status</string>
    <string name="menu_more">More</string>
    <string name="menu_add">Add Medicine</string>
    <string name="action_bar_save">Save</string>
    <string name="emergency_drop">Emergency</string>
    <string name="welcome_home_fragment">Hello, welcome to the app</string>
    <string name="hello_status_fragment">Status of the hardware</string>
    <string name="medicine_type_prompt">Please enter the medicine type below:</string>
    <string name="medicine_time_prompt">Please choose the dosing time:</string>
    <string name="hello_schedule_fragment">Here is your upcoming schedule</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="frequency_prompt">How often do you want to take this pill:</string>
    <string name="amount_prompt">How much do you want to take this pill: (INTEGER)</string>
    <string name="connection_status">Hardware Connection Status: </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
